Solve cors error2