@@ -1,11 +1,13 @@
 package com.SkillSetZone.SkillSetZone.Config;
 
-import com.SkillSetZone.SkillSetZone.Service.CustomUserDetailsService;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -19,10 +21,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collections;
+import com.SkillSetZone.SkillSetZone.Service.CustomUserDetailsService;
 
 @Configuration
 @EnableWebSecurity
@@ -37,17 +38,15 @@ public class SpringSecurity {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors().and() // Enable CORS
-                .csrf().disable()
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/public/login", "/public/signup").permitAll()
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN") // Admin-only endpoints
-                        .requestMatchers("/api/skills/**").authenticated()
-                        .requestMatchers("/api/expr/**").authenticated() // Secured endpoints
-                        .anyRequest().permitAll()) // Public endpoints
-                .httpBasic()
-                .and()
-                .addFilterBefore(new AdminAuthenticationFilter(), BasicAuthenticationFilter.class);
+            .cors(Customizer.withDefaults())
+            .csrf(csrf -> csrf.disable())
+            .authorizeHttpRequests(auth -> auth
+                    .requestMatchers("/public/**").permitAll()
+                    .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                    .anyRequest().authenticated()
+            )
+            .httpBasic(Customizer.withDefaults())
+            .addFilterBefore(new AdminAuthenticationFilter(), BasicAuthenticationFilter.class);
 
         return http.build();
     }
@@ -64,13 +63,11 @@ public class SpringSecurity {
 
     @Bean
     public UserDetailsService adminUserDetailsService() {
-        // Create in-memory admin user
         UserDetails admin = User.builder()
                 .username("admin")
                 .password(passwordEncoder().encode("admin"))
                 .roles("ADMIN")
                 .build();
-
         return new InMemoryUserDetailsManager(admin);
     }
 
@@ -82,23 +79,20 @@ public class SpringSecurity {
         return provider;
     }
 
+    // 🚀 FINAL CORS CONFIG
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(Arrays.asList("https://vpmznt8j-5174.inc1.devtunnels.ms/"));// Frontend URL
-        corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // Frontend URL
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed methods
-        corsConfig.setAllowedHeaders(Arrays.asList("*")); // Allow all headers
-        corsConfig.setAllowCredentials(true); // Allow credentials if needed
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "https://dev-ops-demo-nine.vercel.app"
+        ));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
 
-        // Apply the CORS configuration to all requests
-        org.springframework.web.cors.UrlBasedCorsConfigurationSource source = new org.springframework.web.cors.UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfig);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
         return source;
-    }
-
-    @Bean
-    public CorsFilter corsFilter() {
-        return new CorsFilter(corsConfigurationSource()); // Apply the custom CORS filter
     }
 }
